# elgatoControl

./: .gitignore  CMakeLists.txt  LICENSE  Readme.MD
CmakeScripts/: FindAvahi.cmake
additional/: elgatoDaemon.service.template
elgato-cli/: CMakeLists.txt  ElgatoClient.cpp  ElgatoClient.h  main.cpp
elgato-ui/: CMakeLists.txt  ElgatoClient.cpp  ElgatoClient.h  FixtureMenuItem.cpp  FixtureMenuItem.h  SettingsWindow.cpp  SettingsWindow.h  Tray.cpp  Tray.h  main.cpp
elgatoDaemon/: AvahiBrowser.cpp  AvahiBrowser.h  CMakeLists.txt  Config.h.in  ElgatoLight.cpp  ElgatoLight.h  ElgatoServerImpl.cpp  ElgatoServerImpl.h  HTTPRequest.hpp  Log.cpp  Log.h  SharedQueue.h  main.cpp
proto/: CMakeLists.txt  elgato.proto
